support theme change listener on linux